--- a/azure-resources/MachineLearningServices/workspaces/recommendations.yaml
+++ b/azure-resources/MachineLearningServices/workspaces/recommendations.yaml
@@ -6,8 +6,8 @@
   recommendationResourceType: Microsoft.MachineLearningServices/workspaces
   recommendationMetadataState: Active
   longDescription: |
-   Ensure you have a multi-region recovery strategy defined. Machine Learning doesn't have automatic failover. Therefore, you must design a strategy that encompasses the workspace and all its dependencies, such as Key Vault, Azure Storage, and Azure Container Registry.
-  potentialBenefits: Provides multi-region strategy and enhanced reliability
+   Ensure you have a recovery strategy defined. Check regional availability and paired regions. Machine Learning doesn't have auto failover. Therefore, you must design a strategy that encompasses the workspace and all its dependencies, such as Key Vault, Azure Storage, and Container Registry.
+  potentialBenefits: Provides multi-region disaster recovery strategy and enhanced reliability
   pgVerified: false
   automationAvailable: false
   tags: null
